--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,30 +1,30 @@
-name: Linting with Pylint
+name: Linting with Flake
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   lint:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.9  # Choose the Python version you are using
+        python-version: '3.10'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
-        pip install -r requirements.txt
+        pip install flake8
 
-    - name: Run Pylint
-      run: |
-      # Run Pylint and capture the exit code
-        pylint calculus.py || { exit_code=$?; } && { [ $exit_code -eq 1 ] || exit $exit_code; }
-
-        # Check if the exit code is 30 and exit with the same code
-        [ $exit_code -eq 30 ] && exit $exit_code || true
+    - name: Lint Python file
+      run: flake8 --max-line-length=100 calculus.py
